<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/add"
        android:icon="@android:drawable/ic_menu_add"
        android:showAsAction="ifRoom"
        android:title="@string/add" />
    <item
        android:id="@+id/sync_now"
        android:showAsAction="never"
        android:title="@string/sync_now" />
    <item
        android:id="@+id/sign_in"
        android:showAsAction="never"
        android:title="@string/sign_in" />
    <item
        android:id="@+id/preview_on"
        android:checkable="true"
        android:showAsAction="never"
        android:title="@string/preview_on" />
    <item
        android:id="@+id/open_file"
        android:showAsAction="never"
        android:title="@string/open_file" />
    <item
        android:id="@+id/new_file"
        android:showAsAction="never"
        android:title="@string/new_file" />
    <item
        android:id="@+id/sign_out"
        android:showAsAction="never"
        android:title="@string/sign_out" />
    <item
        android:id="@+id/donate"
        android:showAsAction="never"
        android:title="@string/donate" />
</menu>
